--- a/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html
+++ b/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html
@@ -10,8 +10,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="canonical" href="#Linkcanonical" />
-    <link rel="alternate" href="#Linkcanonical" hreflang="id-ID" />
+    <link rel="canonical" href="https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html" />
+    <link rel="alternate" href="https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html" hreflang="id-ID" />
     <link rel="shortcut icon" type="image/x-icon" href="https://xevimgku.site/icon/bdr55/icon.jpeg" />
     <link rel="apple-touch-icon" href="https://xevimgku.site/icon/bdr55/icon.jpeg" />
     <link rel="icon" type="image/x-icon" href="https://xevimgku.site/icon/bdr55/icon.jpeg" />
@@ -35,7 +35,7 @@
     <!-- Facebook -->
     <meta property="og:title" content="Ramalan Akurat: Shio Naga, Ular, dan Tikus Bakal Kuasai Finansial 15 Februari – Rahasia Maxwin Terbongkar!" />
     <meta property="og:description" content="Jelajahi ramalan shio terkini untuk 15 Februari 2025! Shio Naga, Ular, dan Tikus diprediksi bakal banjir cuan berkat aliran energi langit yang harmonis. Simak rahasia pola Maxwin—strategi astrologi Tionghoa kuno—untuk memaksimalkan rezeki di hari istimewa ini! Dari investasi properti, trik saham jitu, hingga ritual feng shui penarik keberuntungan, temukan panduan lengkap sesuai shio Anda." />
-    <meta property="og:url" content="#Linkcanonical" />
+    <meta property="og:url" content="https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html" />
     <meta property="og:image" content="https://xevimgku.site/img/discovery/Shio.jpeg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:site_name" content="Premier League" />
@@ -74,7 +74,7 @@
         "@type": "Organization",
         "name": "Premier League",
         "alternateName": "Ramalan Akurat: Shio Naga, Ular, dan Tikus Bakal Kuasai Finansial 15 Februari – Rahasia Maxwin Terbongkar!",
-        "url": "#Linkcanonical",
+        "url": "https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html",
         "logo": "https://xevimgku.site/icon/bdr55/icon.jpeg"
       }
     </script>
@@ -86,12 +86,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "#Linkcanonical"
+          "item": "https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html"
         }, {
           "@type": "ListItem",
           "position": 2,
           "name": "Premier League",
-          "item": "#Linkcanonical"
+          "item": "https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html"
         }]
       }
     </script>
@@ -101,7 +101,7 @@
         "@type": "NewsArticle",
         "mainEntityOfPage": {
           "@type": "WebPage",
-          "@id": "#Linkcanonical"
+          "@id": "https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html"
         },
         "headline": "Ramalan Akurat: Shio Naga, Ular, dan Tikus Bakal Kuasai Finansial 15 Februari – Rahasia Maxwin Terbongkar!",
         "description": "Jelajahi ramalan shio terkini untuk 15 Februari 2025! Shio Naga, Ular, dan Tikus diprediksi bakal banjir cuan berkat aliran energi langit yang harmonis. Simak rahasia pola Maxwin—strategi astrologi Tionghoa kuno—untuk memaksimalkan rezeki di hari istimewa ini! Dari investasi properti, trik saham jitu, hingga ritual feng shui penarik keberuntungan, temukan panduan lengkap sesuai shio Anda.",
@@ -109,7 +109,7 @@
         "author": {
           "@type": "Organization",
           "name": "Premier League",
-          "url": "#Linkcanonical"
+          "url": "https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html"
         },
         "publisher": {
           "@type": "Organization",
@@ -281,7 +281,7 @@
     </section>
 
     <section class='n-container m-b-normal'>
-      <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="#Linkcanonical">Paktua Ganteng</a>. All Rights Reserved.</span></div>
+      <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://news20jack.github.io/publik/Ramalan-Akurat-Shio-Naga-Ular-dan-Tikus-Bakal-Kuasai-Finansial-15-Februari-2025.html">Paktua Ganteng</a>. All Rights Reserved.</span></div>
     </section>
   </body>
 </html>
