--- a/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html
+++ b/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html
@@ -10,8 +10,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="canonical" href="#canonical" />
-        <link rel="alternate" href="#canonical" hreflang="id-ID" />
+        <link rel="canonical" href="https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html" />
+        <link rel="alternate" href="https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html" hreflang="id-ID" />
         <link rel="shortcut icon" type="image/x-icon" href="https://xevimgku.site/img/discovery/icon.png" />
         <link rel="apple-touch-icon" href="https://xevimgku.site/img/discovery/icon.png" />
         <link rel="icon" type="image/x-icon" href="https://xevimgku.site/img/discovery/icon.png" />
@@ -33,7 +33,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Tsunami Perkalian Dari Game Mahjong Wins 3 Dengan Pola Tertentu Spin 10x Manual Bonus Spesial Menjelang Ramadhan" />
         <meta property="og:description" content="Game Mahjong online semakin digemari oleh banyak pemain, terutama yang mencari pola kemenangan terbaik untuk mendapatkan perkalian besar." />
-        <meta property="og:url" content="#canonical" />
+        <meta property="og:url" content="https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html" />
         <meta property="og:image" content="https://xevimgku.site/img/discovery/banner3.jpg" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:site_name" content="Promo Spesial Menjelang Ramadhan" />
@@ -150,7 +150,7 @@
             "@type": "Organization",
             "name": "Server Thailand",
             "alternateName": "Tsunami Perkalian Dari Game Mahjong Wins 3 Dengan Pola Tertentu Spin 10x Manual Bonus Spesial Menjelang Ramadhan",
-            "url": "#canonical",
+            "url": "https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html",
             "logo": "https://xevimgku.site/img/discovery/icon.png"
           }
         </script>
@@ -162,12 +162,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "#canonical"
+              "item": "https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Server Thailand",
-              "item": "#canonical"
+              "item": "https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html"
             }]
           }
         </script>
@@ -177,7 +177,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "#canonical"
+              "@id": "https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html"
             },
             "headline": "Tsunami Perkalian Dari Game Mahjong Wins 3 Dengan Pola Tertentu Spin 10x Manual Bonus Spesial Menjelang Ramadhan",
             "description": "Game Mahjong online semakin digemari oleh banyak pemain, terutama yang mencari pola kemenangan terbaik untuk mendapatkan perkalian besar.",
@@ -185,7 +185,7 @@
             "author": {
               "@type": "Organization",
               "name": "Promo Spesial Menjelang Ramadhan",
-              "url": "#canonical"
+              "url": "https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -323,7 +323,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="#canonical" class="rainbow-text"><b>Server Thailand</b></a>. All Rights Reserved.</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://news20jack.github.io/publik/Tsunami-Perkalian-Dari-Game-Mahjong-Wins-3-Dengan-Pola-Tertentu.html" class="rainbow-text"><b>Server Thailand</b></a>. All Rights Reserved.</span></div>
         </section>
       </body>
     </html> 
